# robotics-inference-interview

./: .gitignore  PROGRESS.md  README.md  conftest.py  pyproject.toml
questions/01_algorithms/001_sliding_window_maximum/: README.md  solution.py  starter.py  test_solution.py
questions/02_computer_vision/001_non_maximum_suppression/: README.md  solution.py  starter.py  test_solution.py
questions/03_ml_inference/001_quantize_tensor/: README.md  solution.py  starter.py  test_solution.py
questions/04_robotics/001_rotation_matrix_3d/: README.md  solution.py  starter.py  test_solution.py
questions/05_systems/001_thread_safe_ring_buffer/: README.md  solution.py  starter.py  test_solution.py
questions/06_linear_algebra/001_power_iteration/: README.md  solution.py  starter.py  test_solution.py
ramp_up/cpp/: LEARNING_POINTS.md
ramp_up/cpp/01_stl_containers/: README.md  solution.cpp  starter.cpp  test_solution.py
ramp_up/cpp/02_ownership_and_raii/: README.md  solution.cpp  starter.cpp  test_solution.py
ramp_up/cpp/03_move_semantics_rule_of_five/: README.md  solution.cpp  starter.cpp  test_solution.py
ramp_up/cpp/04_virtual_functions_and_vtables/: README.md  solution.cpp  starter.cpp  test_solution.py
ramp_up/cpp/05_memory_layout_and_cache/: README.md  solution.cpp  starter.cpp  test_solution.py
ramp_up/cpp/06_threads_atomics_queues/: README.md  solution.cpp  starter.cpp  test_solution.py
ramp_up/python/: LEARNING_POINTS.md
ramp_up/python/01_collections_and_slicing/: README.md  (+3 more)
ramp_up/rust/: LEARNING_POINTS.md
ramp_up/typescript/: LEARNING_POINTS.md
(+28 files in other folders)
